fix layout bug on older ios devices

--- a/_assets/scss/elements/_base.scss
+++ b/_assets/scss/elements/_base.scss
@@ -22,7 +22,7 @@ body {
   overflow-x: hidden;
   width: 100vw;
   font-size: 0;
-  height: 100%;
+  min-height: 100vh;
 }
 
 header,
